--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -97,7 +97,8 @@ margin-right:1px;
 }
 
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
-  background-color: #33BEFF;
+  /*background-color: #33BEFF;*/
+  background-color:#F3F694
 }
 
 th { font-size: 12px; }
@@ -105,6 +106,11 @@ td { font-size: 15px; }
 
 .dataTables tbody tr {
 min-height: 15px; /* or whatever height you need to make them all consistent */
+}
+
+tr {
+width: 100%;
+height:25px; 
 }
 
 
