--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -10,6 +10,11 @@ body {
 	margin-bottom: 60px;
 }
 
+input[type="text"]:disabled
+ {
+    color:red;
+    font-size: 24px;
+ } 
 .footer {
 	position: absolute;
 	bottom: 0;
